--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,9 +24,7 @@ section, summary, time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;}
-.bio{
-	font-size: 16px;
-}
+
 
 .tag{
 	font-weight: 500;
@@ -1377,17 +1375,17 @@ input, select, textarea {
 	}
 
 	h1 {
-		font-size: 2.4em;
+		font-size: 1.4em;
 		letter-spacing: -0.015em;
 	}
 
 	h2 {
-		font-size: 1.8em;
+		font-size: 1em;
 		letter-spacing: -0.015em;
 	}
 
 	h3, h4, h5, h6 {
-		font-size: 1.25em;
+		font-size: .9em;
 		letter-spacing: -0.015em;
 	}
 
@@ -1441,7 +1439,7 @@ input, select, textarea {
 	}
 
 	p, ul, ol, dl, table, blockquote, form {
-		margin-bottom: 2em;
+		margin-bottom: .5em;
 	}
 
 /* Table */
@@ -2092,9 +2090,10 @@ input, select, textarea {
 					-webkit-flex-shrink: 1;
 					-ms-flex-shrink: 1;
 					flex-shrink: 1;
-					padding: 3.5em 2.5em;
+					padding: 2.5em 2.5em;
 					margin-bottom: 0;
 					width: 100%;
+					height: 100%;
 				}
 
 					#main > .panel.intro header h1 {
@@ -2104,7 +2103,7 @@ input, select, textarea {
 
 					#main > .panel.intro header p {
 						letter-spacing: -0.015em;
-						font-size: 1.25em;
+						font-size: .8em;
 						margin: 0.25em 0 0 0;
 					}
 
@@ -2141,10 +2140,14 @@ input, select, textarea {
 					}
 
 						#main > .panel.intro header p {
-							font-size: 1em;
+							font-size: .8em;
 							margin: 0.25em 0 0 0;
 						}
 
+				}
+
+				p{
+					font-size: .8em;
 				}
 
 /* Footer */
